fix searchbar positionng issue on small screen

--- a/src/containers/OrderContainer/orderContainer.scss
+++ b/src/containers/OrderContainer/orderContainer.scss
@@ -4,7 +4,6 @@
     margin: 140px auto 20px auto;
     background-color: #F9F9F9;
     width: 80%;
-    min-height: 70vh;
     padding-bottom: 20px;
 
     .col-1 {
